--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.11.0",
+    "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
