--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.6.5",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
